--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Figure Time",
+  "name": "About Time",
   "version": "1.0",
   "description": "Timezones of your choosing in every new tab screen.",
   "chrome_url_overrides": {
